# recusal

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONSTITUTION.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  conftest.py  pyproject.toml  release-requirements.txt
.claude/: settings.json.example
.claude-plugin/: marketplace.json
.claude/hooks/: recusal_gate.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-dist.yml  ci.yml  release.yml  scorecard.yml
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/hooks/: hooks.json
claude-plugin/scripts/: recusal_gate.py
docs/: ARCHITECTURE.md  COOKBOOK.md  EVIDENCE.md  EXAMPLE.md  EXTENDING.md  FAQ.md  HOWTO.md  LANDSCAPE.md  MCP.md  PROVEN.md  README.md  REFERENCES.md  WHY.md
examples/: README.md  agent_loop.py  allowlist_gate.py  audit_demo.py  classify_demo.py  claude_agent_live.py  claude_code_gate.py  claude_refusal.py  gallery.py  injection_quarantine.py  mcp_full_stack.py  mcp_governance.py  mcp_manifest_rugpull.py  mcp_security_demo.py  quickstart.py  scenarios.py
recusal/: __init__.py  __main__.py  _mcp_screening.py  audit.py  checks.py  classify.py  claude.py  claude_code.py  deny_list.py  evidence.py  gates.py  mcp.py  mcp_fetch.py
tests/: test_action_contract.py  test_audit.py  test_audit_concurrency.py  test_audit_hardening.py  test_audit_sink.py  test_audit_tail.py  test_checks.py  test_checks_edge.py  test_classify.py  test_claude.py  test_claude_code.py  test_claude_code_allowlist.py  test_claude_code_robust.py  test_claude_plugin.py  test_cli.py  test_coerce_strict.py  test_contract_invariants.py  test_demos_smoke.py  test_deny_list.py  test_deny_list_package_protection.py  test_dogfood.py  test_dogfood_redteam.py  test_evidence.py  test_evidence_semantics.py  test_gates.py  test_gates_completeness.py  test_hook_audit.py  test_init_scaffolder.py  test_kernel_properties.py  test_mcp_cli.py  test_mcp_compatibility.py  test_mcp_cookbook.py  test_mcp_fetch.py  test_mcp_governance.py  test_mcp_launch_identity.py  test_mcp_live.py  test_mcp_manifest.py  test_mcp_observation.py  test_mcp_observation_decommission.py  test_mcp_observation_inventory.py  (+16 more)
tests/fixtures/: mcp_live_sf_gateway.tools.json  mcp_live_sf_hosted.tools.json
tools/: vendor_plugin.py
