[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recusal"
version = "0.4.1"
description = "Lightweight, extensible, Claude-native governance for AI agents: an independent, deterministic verifier that can refuse to certify a tool call before it runs. Builders cannot grade their own work."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Philip Paz", email = "philip.paz@gmail.com" }]
keywords = [
    "ai-agents", "agent-governance", "guardrails", "verifier", "determinism",
    "claude", "claude-code", "separation-of-powers", "runtime-governance",
    "agent-reliability", "agent-safety", "tool-use", "llm", "ai-safety",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = []  # zero runtime dependencies, standard library only

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.8"]

[project.scripts]
recusal = "recusal.__main__:main"

[project.urls]
Homepage = "https://github.com/philpaz/recusal"
Author = "https://www.linkedin.com/in/philippaz/"
Documentation = "https://github.com/philpaz/recusal/tree/main/docs"
Repository = "https://github.com/philpaz/recusal"
Issues = "https://github.com/philpaz/recusal/issues"
Changelog = "https://github.com/philpaz/recusal/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["recusal"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]  # long doc/example lines are fine

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["E402"]  # sys.path shim must precede imports in runnable examples

[tool.mypy]
# Match the declared minimum runtime (requires-python >=3.9): static analysis must vet
# the oldest interpreter we claim to support, not a newer one.
python_version = "3.9"
files = ["recusal"]
warn_unused_ignores = true
warn_redundant_casts = true
