# Build backend pinned exactly: a floating backend is unreviewed code in the
# release path (the same rug-pull surface as a moving action tag).
# 1.27.0 is the newest hatchling that still supports Python 3.9, and this
# requires clause is evaluated on every supported interpreter (pip install -e
# on 3.9 builds with it too), so the pin tracks the package floor, not the
# release runner's Python.
[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "recusal"
dynamic = ["version"]
description = "Lightweight, extensible, Claude-native governance for AI agents: an independent, deterministic verifier that can refuse to certify a tool call before it runs. Builders cannot grade their own work."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Philip Paz", email = "philip.paz@gmail.com" }]
keywords = [
    "ai-agents", "agent-governance", "guardrails", "verifier", "determinism",
    "claude", "claude-code", "separation-of-powers", "runtime-governance",
    "agent-reliability", "agent-safety", "tool-use", "llm", "ai-safety",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = []  # zero runtime dependencies, standard library only

[project.optional-dependencies]
# mypy 2.x no longer accepts python_version=3.9. Keep the newest 1.x checker so
# static analysis continues to validate the minimum runtime we publicly support.
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.8,<2"]

[project.scripts]
recusal = "recusal.__main__:main"

[project.urls]
Homepage = "https://github.com/philpaz/recusal"
Author = "https://www.linkedin.com/in/philippaz/"
Documentation = "https://github.com/philpaz/recusal/tree/main/docs"
Repository = "https://github.com/philpaz/recusal"
Issues = "https://github.com/philpaz/recusal/issues"
Changelog = "https://github.com/philpaz/recusal/blob/main/CHANGELOG.md"

# ONE source of truth for the Python package version: recusal/__init__.py.
# (Plugin/marketplace JSON keep literals - JSON cannot import Python - and
# drift-lock tests keep them equal.)
[tool.hatch.version]
path = "recusal/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["recusal"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]  # long doc/example lines are fine

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["E402"]  # sys.path shim must precede imports in runnable examples

[tool.mypy]
# Match the declared minimum runtime (requires-python >=3.9): static analysis must vet
# the oldest interpreter we claim to support, not a newer one.
python_version = "3.9"
files = ["recusal"]
warn_unused_ignores = true
warn_redundant_casts = true
